fix: some overflow issues

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -703,6 +703,7 @@ hr {
 .resize {
   resize: both;
   overflow: hidden;
+  max-width: -webkit-fill-available;
 }
 
 /* ideas from https://github.com/PiotrSss/logseq-bujo-theme/blob/main/main.css */
